Added complete AboutUs, T&C privacy policy pages

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-react": "^5.25.2",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.15",
+    "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.0.0",
