--- a/package.json
+++ b/package.json
@@ -11,22 +11,19 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.25.2",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@google/generative-ai": "^0.24.0",
     "@heroicons/react": "^2.2.0",
-    "@mui/icons-material": "^7.0.0",
-    "@mui/material": "^7.0.0",
     "@tailwindcss/vite": "^4.0.15",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.483.0",
-    "pdf-parse": "^1.1.1",
-    "pdfjs-dist": "^5.0.375",
+    "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.0.0",
-    "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "react-spinners": "^0.15.0",
+    "sse.js": "^2.6.0",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
