--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.25.2",
+    "@emotion/styled": "^11.14.0",
     "@google/generative-ai": "^0.24.0",
     "@heroicons/react": "^2.2.0",
+    "@mui/icons-material": "^7.0.1",
     "@tailwindcss/vite": "^4.0.15",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.483.0",
@@ -20,6 +22,7 @@
     "react": "^19.0.0",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "react-spinners": "^0.15.0",
