--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^7.0.1",
     "@tailwindcss/vite": "^4.0.15",
+    "axios": "^1.8.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.483.0",
     "node-fetch": "^3.3.2",
