--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.4.0",
     "react-spinners": "^0.15.0",
-    "sse.js": "^2.6.0",
-    "tailwindcss": "^4.0.15"
+    "sse.js": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -39,6 +40,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "tailwindcss": "^4.1.1",
     "vite": "^6.2.0"
   }
 }
