--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^7.0.1",
     "@tailwindcss/vite": "^4.0.15",
     "axios": "^1.8.4",
+    "html2pdf.js": "^0.10.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.483.0",
     "node-fetch": "^3.3.2",
